--- a/httplabkell.cabal
+++ b/httplabkell.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ff5746fbd3465bb71ec544a061f8a44582bcf87a40173a8738355e525d1ccf5e
+-- hash: 90532e6bda1c2400de9ca9febdddb5d3785c4536d155c60fec76859d3e0b8663
 
 name:           httplabkell
 version:        0.1.0.0
@@ -50,6 +50,7 @@ library
     , vty
     , wai
     , warp
+    , warp-tls
   default-language: Haskell2010
 
 executable httplabkell-exe
@@ -76,6 +77,7 @@ executable httplabkell-exe
     , vty
     , wai
     , warp
+    , warp-tls
   default-language: Haskell2010
 
 test-suite httplabkell-test
@@ -103,4 +105,5 @@ test-suite httplabkell-test
     , vty
     , wai
     , warp
+    , warp-tls
   default-language: Haskell2010
